--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=spring_1
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:mem:spring
+spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.defer-datasource-initialization=true
 
 # H2
