--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,21 @@
 spring.application.name=spring_1
 
-# JPA
+# Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:mem:spring
-spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
 
 # H2
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:spring
+#spring.datasource.driver-class-name=org.h2.Driver
+
+# MariaDB
+spring.datasource.url=jdbc:mariadb://localhost:3306/jw_main?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
 # AWS
 
